tests/NormalTests/paczka2/big_fuzzy/20988047.err
Error in line 1: 3eaxVQY3 A890 78,1
Error in line 2: 3eaxVQY3 S459 79,4
Error in line 11: BO3sh0 S578 68,8
Error in line 12: BO3sh0 S163 54,2
Error in line 33: BO3sh0 S459 49,25
Error in line 26: 3eaxVQY3 A890 39,0
Error in line 18: A890 S459 352,0
Error in line 38: 4Zv4 S163 15,7
Error in line 42: A890 A890 26,7
Error in line 32: BO3sh0 S459 19,4
Error in line 46: P1F A890 99,5
Error in line 68: XHihrJA7bed A890 71,6
Error in line 73: XHihrJA7bed S578 25,2
Error in line 75: XHihrJA7bed A890 11,3
Error in line 79: 3eaxVQY3 S578 77,5
Error in line 80: XHihrJA7bed S459 19,4
Error in line 40: 61lv A890 203,0
Error in line 91: A890 S459 -2,0
Error in line 120: 3eaxVQY3 S578 56,7
Error in line 121: 3eaxVQY3 A890 77,6
Error in line 123: BO3sh0 S163 121,4
Error in line 126: BO3sh0 A890 48,5
Error in line 131: BO3sh0 S459 91,6
Error in line 146: A890 S163 91,97
Error in line 153: BO3sh0 A890 9,9
Error in line 159: 61lv S459 6,19
Error in line 167: P1F S578 44,5
Error in line 166: 4Zv4 S459 89,2
Error in line 152: A890 S163 27,5
Error in line 185: BO3sh0 A890 78,6
Error in line 156: 61lv S459 4,4
Error in line 184: A890 S578 47,1
Error in line 195: 61lv A890 42,2
Error in line 198: 61lv S459 99,7
Error in line 215: 3eaxVQY3 S459 91,9
Error in line 216: 3eaxVQY3 A890 72,9
Error in line 237: P1F S459 0,3
Error in line 212: A890 S459 98,6
Error in line 229: 3eaxVQY3 S163 2,2
Error in line 240: P1F A890 70,7
